2011-06-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-diff): make sure the *vc-diff*
	buffer is read-only, to enable diff-mode commands.

2011-06-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-actb-refresh-on-checkin)
	(ucm-actb-refresh-activity): new functions, called when check-in
	happens
	(ucm-unload-hook): new function.  Ensure the library can be
	unloaded properly.

2011-05-18  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-version): updated for release 3.6

2011-05-12  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-revision-completion-table): doc
	fix.

2011-05-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-delete-activity): new function

2011-04-01  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-start-logentry): refadvice removed
	(clearcase-finish-checkout-reserved)
	(clearcase-finish-checkout-unreserved): functions removed
	(vc-clearcase-checkout): invoke `log-edit' directly instead via
	`vc-start-entry'
	(clearcase-bind-checkout-comment): new function, added to
	`vc-before-checkin-hook'

	(vc-clearcase-revision-table)
	(vc-clearcase-revision-completion-table): new functions

2011-03-30  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-root): when called with a nil arg,
	use `default-directory'

2011-03-08  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-annotate-contributor-to-line):
	update for new return value from
	`vc-annotate-extract-revision-at-line'

2011-02-22  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-get-file-version): new function
	(clearcase-diff-with-diff): use `clearcase-get-file-version'
	instead of `vc-find-file' -- avoids loading the versioned files in
	Emacs

2011-02-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase): add link to documentation page

	* ucm.el (ucm): add link to documentation page
