@@ -1,3 +1,11 @@
+2011-07-11  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (clearcase-dir-status-parse-line): recognize
+	missing and secial selection files.
+	(vc-clearcase-dir-status): remove the -visible arg from the ls
+	comand -- we want info about missing files too
+	(vc-clearcase-dir-printer): new function
+
 2011-06-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (vc-clearcase-diff): make sure the *vc-diff*
